Create e-commerece website using html, css, js

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
             <a href="summer.html">SUMMER SALE</a>
             <a href="catering.html">CATERING</a>
             <a href="contact.html">CONTACT</a>
+            <a href="loginsignup.html">LOGIN</a>
         </div>
     </nav>
     <!-- ----------------------------------------FIRST CAROUSEL----------------------------------------------------->
     <div class="slide">
         <div class="slide_container">
             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                <!-- Indicators -->
                 <ol class="carousel-indicators">
                   <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                   <li data-target="#carousel-example-generic" data-slide-to="1"></li>
