--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     <div class="contact_container" style="padding-top:100px;">
         <h2>Contact Us</h2>
         <div class="g_map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3340544.4960977174!2d-121.88102652009785!3d35.150373310697375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fba02425dad8f%3A0x6c296c66619367e0!2sGoogleplex!5e0!3m2!1sen!2sin!4v1628463464648!5m2!1sen!2sin" width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d972554.9244432518!2d76.49845083214903!3d18.790930080542243!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m3!3e6!4m0!4m0!5e0!3m2!1sen!2sin!4v1720943286157!5m2!1sen!2sin" width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <div class="contact_content">
             <p>We want to hear from you! Drop us a note and someone from our team will get back to you.
